# 2020_huawei_warm_up

./: CMakeLists.txt  README.md  main.cpp  main_depricated.cpp  main_double.cpp  main_fasterFileIO.cpp  main_fullConnecting.cpp  main_naive.cpp  main_noSSE.cpp  main_pthread.cpp  main_testNoSSE.cpp  main_testSSE.cpp  main_testnewSSE.cpp  main_trypthread.cpp  main_windows.cpp
output/: result.txt
